--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .container {
     max-width: 1440px;
     width: 100%;
-    margin: 50px auto;
-    background-color: aquamarine;
+    margin: auto;
+    margin-top: 50px;
 }
 
 .task1_div {
@@ -23,18 +23,109 @@ button {
     color: white;
     font-size: 20px;
     border: none;
-    box-shadow: 2px 2px 5px 0px white inset,5px 5px 10px 0px black;
+    box-shadow: 2px 2px 5px 0px white inset, 5px 5px 10px 0px black;
     border-radius: 20px;
     text-shadow: 5px 3px 5px black;
+    cursor: pointer;
 }
 
-button:hover{
+button:hover {
     text-shadow: 1px 1px 1px black;
-    box-shadow: 5px 5px 10px 0px black inset,-3px -3px 5px 0px white inset;
+    box-shadow: 5px 5px 10px 0px black inset, -3px -3px 5px 0px white inset;
+}
+
+
+
+/* Task #2 */
+.task2_div {
+    width: 600px;
+    height: 700px;
+    margin:50px auto;
+    padding: 50px;
+}
+
+img {
+    width: 100%;
+    height: 550px;
+}
+
+figcaption {
+    color: gray;
+    font-size: 25px;
+    font-family: 'Dancing Script', cursive;
+    margin-top: 20px;
+}
+
+.task2_div:hover {
+    box-shadow: 5px 5px 10px 5px darkblue, -5px -5px 10px 5px darkblue;
+    border-radius: 30px;
+}
+
+img:hover {
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+}
+
+.task2_div,
+img {
+    transition: all 1s;
+}
+
+/* gasaketebelia orive ertad rom icvlides formas eg */
+
+
+/* Task #3 */
+h1 {
+    letter-spacing: 20px;
+    font-size: 140px;
+    color: red;
+    display: flex;
+    justify-content: center;
+
+    animation-name: TextLight;
+    animation-duration: .5s;
+    animation-iteration-count: infinite;
+
+}
+
+@keyframes TextLight {
+    from {
+        color: red;
+    }
+
+    to {
+        color: yellow;
+    }
 }
 
 
 
 
+/* Task #6 */
+.task6_div {
+    margin-top: 50px;
+    background-color: white;
+    border: 1px black solid;
+    border-radius: 40px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: Loading;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes Loading {
+    0% {
+        background-color: white;
+        /* margin-left: 0; */
+    }
 
 
+    100% {
+        background-color: red;
+        /* margin-left:20px; */
+    }
+}
