--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@
     max-width: 1440px;
     width: 100%;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 60px;
 }
+
+/* Task #1 */
 
 .task1_div {
     display: flex;
@@ -19,6 +21,7 @@
 button {
     width: 300px;
     height: 100px;
+    letter-spacing: 5px;
     background-color: violet;
     color: white;
     font-size: 20px;
@@ -40,7 +43,7 @@ button:hover {
 .task2_div {
     width: 600px;
     height: 700px;
-    margin: 50px auto;
+    margin: 60px auto;
     padding: 50px;
 }
 
@@ -70,8 +73,6 @@ img:hover {
 img {
     transition: all 1s;
 }
-
-/* gasaketebelia orive ertad rom icvlides formas eg */
 
 
 /* Task #3 */
@@ -129,78 +130,58 @@ img {
     }
 }
 
-/* texti trualebs da ar cherdebaaa */
-
-
 /* Task #5 */
-header{
+header {
     background-color: darkslategray;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100px;
-    margin: 100px auto;
+    margin: auto;
 }
 
 .header_ul {
     display: flex;
-    column-gap: 48px;}
+    column-gap: 48px;
+}
 
-.header_li{
+.header_li {
     font-size: 50px;
     color: burlywood;
     text-shadow: 3px 2px 3px black;
     transition-duration: 1s;
 }
 
-.header_li:hover{
+.header_li:hover {
     text-shadow: 0 0 5px rgb(255, 0, 179), 0 0 10px rgb(255, 0, 179), 0 0 15px rgb(255, 0, 179), 0 0 20px rgb(255, 0, 179);
 }
 
 
 
-
-
-
 /* Task #6 */
-/* .task6_div {
-    width: 100%;
-    height: 50px;
+.task6_div {
+    margin-top: 50px;
+    background-color: white;
     border: 1px black solid;
     border-radius: 40px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    animation-name: Loading;
     animation-duration: 3s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
-
-}
-
-.task6_loader {
-    background-color: white;
-    border-radius: 40px;
-    height: 100%;
-    display: flex;
-    align-items: flex-start;
-    color: red;
-    position: relative;
-    animation-name: Loading;
-}
-
-p {
-    font-size: 40px;
 }
 
 @keyframes Loading {
     0% {
-        background-color: rgb(37, 7, 7);
-        left: 0;
+        background-color: white;
+        /* margin-left: 0; */
     }
 
     100% {
         background-color: red;
-        left: 10px;
+        /* margin-left:20px; */
     }
-} */
+}
